Bugfix: Vertical scrollbars now always show, to prevent page resize glitch Added: Angular User and Auth modules, for authentication. Modified: States Manager now uses StateHelper rather than constants, for improved cleanliness of code.

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -1,3 +1,9 @@
+html
+{
+    // force verical scrollbar
+    overflow-y: scroll;
+}
+
 body
 {
     // subtle gradient
